# bigWigs2NumPys

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cc
docs/: TODO.md  build.md  specify_coords.excalidraw.md  specify_coords.md  test.md  torch.md
include/bigWigs2tensors/: proc_bigWigs.h  util.h
libs/libBigWig/: CMakeLists.txt
src/: CMakeLists.txt  proc_bigWigs.cc  util.cc
tests/: CMakeLists.txt  main.cc
